fix(Skills): spacing bwt bars

--- a/src/components/Skilss/styles.css
+++ b/src/components/Skilss/styles.css
@@ -33,8 +33,10 @@
     background-color: #D9D9D9;
     border: 1px solid;
     border-radius: 25px;
-    margin-top: 4rem;
+    margin-top: 1rem;
     margin-left: 15rem;
+    line-height: 1.6;
+    
 }
 
 /* 
